# couriers

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: publish.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/command/: serve.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/server/src/routes/: mod.rs
crates/server/src/routes/api/: mod.rs
crates/web/: Cargo.toml
crates/web/public/: index.html
crates/web/src/: lib.rs
crates/web/src/views/: home.rs
