[package]
name = "couriers"
version = "0.0.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
publish = true
description = "SMTP Server with Web UI for Email solutions development"
license = "MIT"

[[bin]]
name = "couriers"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["std", "derive", "env"] }

# Workspace
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
