[package]
name = "couriers"
version = "0.0.0-unreleased+1"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
publish = true
description = "API Client for Couriers a SMTP Server with Web UI for Email solutions development"
license = "MIT"

[lib]
name = "couriers"
path = "src/lib.rs"

[dependencies]
