[package]
name = "server"
version = "0.0.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
publish = false
description = "SMTP Server with Web UI for Email solutions development"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }

# Local
couriers = { path = "../client" }
