[package]
name = "web"
version = "0.0.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
publish = false
description = "SMTP Server with Web UI for Email solutions development"
license = "MIT"

[lib]
name = "web"
path = "src/lib.rs"

[[bin]]
name = "couriers-web"
path = "src/bin/main.rs"

[dependencies]
leptos =  { workspace = true, features = ["csr", "nightly"] }
leptos_meta = { workspace = true }
leptos_router = { workspace = true, features = ["csr", "nightly"] }

# Local
couriers = { path = "../client" }
